--- a/TDDTest/TDDTest.csproj
+++ b/TDDTest/TDDTest.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TDD-Sample.csproj" />
     <ProjectReference Include="..\TDD-Sample\TDD-Sample.csproj" />
   </ItemGroup>
 
